@@ -5,6 +5,9 @@ use warnings;
 use Module::Build ##{ $meta2{prereqs}->{configure}->{requires}->{'Module::Build'} ##};
 use File::Spec::Functions qw( catdir );
 
+sub testing { $ENV{AUTOMATED_TESTING} || $ENV{PERL_CPAN_REPORTER_CONFIG}
+                                      || $ENV{PERL5_CPANPLUS_IS_VERSION} }
+
 sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
 
 my $perl_ver = ##{ $meta2{prereqs}->{runtime}->{requires}->{perl} ##};
@@ -13,20 +16,17 @@ my $prereqs  = {
 ##{ $plugin->get_prereqs( 1 ) ##}
 };
 
-if ($] < $perl_ver) {
-   $ENV{AUTOMATED_TESTING}
-      or $ENV{PERL_CPAN_REPORTER_CONFIG}
-      or $ENV{PERL5_CPANPLUS_IS_VERSION}
-      or whimper "Minimum required Perl version is ${perl_ver}";
+if ($] < $perl_ver) { # Not interested in reports below min perl ver
+   testing or whimper "Minimum required Perl version is ${perl_ver}";
    $prereqs->{build_requires} = { %{ $prereqs->{configure_requires} } };
    $prereqs->{build_requires}->{ 'Test::Requires' } = 0.06;
    delete $prereqs->{requires};
 }
 
 my $bob = Module::Build->subclass( code => do { local $/; <DATA> } )->new(
-  'module_name'  => $name,
-  'notes'        => { min_perl_version => $perl_ver },
-  %{ $prereqs },
+   'module_name' => $name,
+   'notes'       => { min_perl_version => $perl_ver },
+   %{ $prereqs },
 ##{ $plugin->get_default('share_dir') ##}
 );
 
