@@ -128,8 +128,15 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .expanding_area>textarea{height:100%;left:0;margin:0;overflow:hidden;position:absolute;resize:none;top:0;width:100%}
 .expanding_spacer{display:block;visibility:hidden;font-size:16px !important;margin:0 !important;max-width:820px;padding:3px !important;text-align:left}
 .file-link{white-space:nowrap}
+.fixed-footer{bottom:0;left:0;padding:18px;position:fixed;z-index:-100}
+.fixed-footer.container-fluid{background-color:#000;font-size:14px;line-height:18px;min-height:72px;overflow:hidden;padding-top:0}
+.fixed-footer.container-fluid .footer-nav{margin:18px 0}
+.fixed-footer.container-fluid .footer-nav li{list-style:none}
+.fixed-footer.container-fluid .footer-nav li a{font-size:18px;line-height:36px;font-weight:700;font-family:"Roboto Slab","Times New Roman","Times","serif"}
+.fixed-footer.container-fluid .footer-nav li a:hover{color:#569220;text-decoration:none}
+.fixed-footer.container-fluid .twitter{margin-top:36px}
+.fixed-footer.container-fluid .twitter:first-child{margin-top:36px}
 .folder{font-size:16px;line-height:18px}
-.footer{bottom:0;left:0;padding:18px;position:fixed}
 .github-ribbon{position:absolute;right:0;top:54px;z-index:10}
 .hero-buttons.container-fluid{background-color:#92c86a;overflow:hidden;min-height:18px;padding:18px 0}
 .hero-buttons.container-fluid .btn-hero.btn{border:5px solid #000;font-size:14px;line-height:18px;-khtml-opacity:.8;-webkit-opacity:.8;opacity:.8;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(opacity=80);filter:alpha(opacity=80);padding:18px 36px;margin:0 8px;font-weight:700;font-family:"Roboto Slab","Times New Roman","Times","serif";text-transform:uppercase}
@@ -137,19 +144,12 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .hero-buttons.container-fluid .btn-hero.btn.btn-secondary{background-color:#92c86a;color:#000}
 .hero-buttons.container-fluid .btn-hero.btn.btn-primary{background-color:#000;color:#f5f5f6}
 .hidden{display:none}
-.homepage-content.container-fluid,.homepage-footer.container-fluid{font-size:14px;line-height:18px}
+.homepage-content.container-fluid{font-size:14px;line-height:18px}
 .homepage-content.container-fluid .lead{font-weight:400;font-family:"Roboto Slab","Times New Roman","Times","serif"}
 .homepage-content.container-fluid ol,.homepage-content.container-fluid ul{margin:18px 0;padding:0}
 .homepage-content.container-fluid ol li,.homepage-content.container-fluid ul li{list-style:none;padding-bottom:6px}
 .homepage-content.container-fluid ul li:before,.homepage-content.container-fluid ol li:before{border:3px solid transparent;border-left:3px solid #569220;content:'';display:block;float:left;height:0;margin:6px;width:0}
 .homepage-content.container-fluid{background-color:#fff;overflow:hidden;min-height:72px;padding:36px 0}
-.homepage-footer.container-fluid{background-color:#000;min-height:72px;overflow:hidden;padding-top:0}
-.homepage-footer.container-fluid .footer-nav{margin:18px 0}
-.homepage-footer.container-fluid .footer-nav li{list-style:none}
-.homepage-footer.container-fluid .footer-nav li a{font-size:18px;line-height:36px;font-weight:700;font-family:"Roboto Slab","Times New Roman","Times","serif"}
-.homepage-footer.container-fluid .footer-nav li a:hover{color:#569220;text-decoration:none}
-.homepage-footer.container-fluid .twitter{margin-top:36px}
-.homepage-footer.container-fluid .twitter:first-child{margin-top:36px}
 .homepage-hero{background-color:#569220;color:#000}
 .homepage-hero{overflow:hidden;font-weight:700;font-family:"Roboto Slab","Times New Roman","Times","serif"}
 .homepage-hero .homepage-image{margin-bottom:18px;max-height:475px}
@@ -224,7 +224,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .well.well-sidebar a:hover{text-decoration:none}
 .well.well-sidebar .twitter hr{border-bottom:none;margin-left:-20px;margin-right:-20px}
 .well.well-sidebar select{font-size:14px;line-height:18px}
-@media only screen and (max-width:820px){table,thead,tbody,th,td,tr{border:none;display:block} thead tr{left:-9999px;position:absolute;top:-9999px} tr{border-bottom:2px solid #adcb83;margin-bottom:10px} tr td,tr th{border:1px solid #adcb83;border-bottom:none} td{border:none;border-bottom:1px solid #adcb83;padding-left:50% !important;position:relative;white-space:normal;text-align:left} td:before{font-weight:bold;left:6px;padding-right:10px;position:absolute;text-align:left;top:6px;white-space:nowrap;width:45%} td:before{content:attr(data-title)}}@media (max-width:820px){body{overflow-y:scroll} .collapse.in{display:none} .columns .left-column,.columns .right-column{height:auto;padding-top:0;width:100% !important} .columns .right-column .content-page{padding-right:220px !important} .hero-buttons.container-fluid .btn-hero.btn{display:block;margin-bottom:10px} .homepage-hero{padding-top:0 !important} .homepage-content.container-fluid{padding:40px 20px} .homepage-footer.container-fluid{padding:0 20px} .responsive-collapse{display:block !important}}@media (min-width:820px){.content-page article{max-width:600px}}@media (max-width:1149px){.pod>div{overflow:hidden;position:relative}}@media (min-width:1150px){.float-view .content-page{background-color:transparent !important;height:100%;padding:0 !important} .float-view .content-page article{border-left:18px solid #fff;max-width:100% !important;min-height:100%;overflow:auto;position:relative} .float-view .content-page article:before{background-color:#fff;content:'';display:block;margin:0;min-height:100%;min-width:560px;overflow:auto;position:absolute;width:55%;z-index:-1} .float-view .content-page blockquote{clear:both;display:inline-block;float:left;overflow:hidden;width:48%} .float-view .content-page blockquote p{clear:none;float:none;margin-bottom:18px;min-width:328px;width:auto} .float-view .content-page blockquote:before{clear:both;content:'';display:block;height:18px;width:auto} .float-view .content-page hr{border-color:#adcb83;clear:left;float:left;width:50%} .float-view .content-page ol li,.float-view .content-page ul li{clear:left;float:left} .float-view .content-page ol li p,.float-view .content-page ul li p{background-color:#fff;clear:right;float:left;margin-left:18px;margin-right:18px;min-width:400px;width:auto} .float-view .content-page ol li pre,.float-view .content-page ul li pre{-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;clear:left;float:left;margin-right:18px;width:auto} .float-view .content-page p,.float-view .content-page .page-header{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page p.toplink{background-color:transparent;margin-bottom:0;margin-top:-23px;text-align:right} .float-view .content-page>article>pre{border:none;border-left:5px solid #881102;clear:right;float:left;margin:0 0 9px 0} .float-view .content-page table{background-color:#fff;clear:left;float:left;margin-left:18px;margin-right:18px;white-space:normal;max-width:50%} .float-view .content-page table pre,.float-view .content-page table code{white-space:normal} .float-view .content-page dl,.float-view .content-page ol,.float-view .content-page ul,.float-view .content-page h2,.float-view .content-page h3,.float-view .content-page h4,.float-view .content-page h5,.float-view .content-page h6{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page .page-header:before,.float-view .content-page ul:before,.float-view .content-page ol:before,.float-view .content-page dl:before,.float-view .content-page h2:before,.float-view .content-page h3:before,.float-view .content-page h4:before,.float-view .content-page h5:before,.float-view .content-page h6:before{clear:both;content:'';display:block;height:9px;width:auto} .float-view .content-page .pod,.float-view .content-page .pod pre{clear:both;float:left;position:relative}}@media (min-width:1200px){.columns .right-column.span9{width:76.8866339334%}}.flag_da{background:url(../img/flags.png) no-repeat 0 0;display:block;height:24px;padding:0 0 0 32px}
+@media only screen and (max-width:820px){table,thead,tbody,th,td,tr{border:none;display:block} thead tr{left:-9999px;position:absolute;top:-9999px} tr{border-bottom:2px solid #adcb83;margin-bottom:10px} tr td,tr th{border:1px solid #adcb83;border-bottom:none} td{border:none;border-bottom:1px solid #adcb83;padding-left:50% !important;position:relative;white-space:normal;text-align:left} td:before{font-weight:bold;left:6px;padding-right:10px;position:absolute;text-align:left;top:6px;white-space:nowrap;width:45%} td:before{content:attr(data-title)}}@media (max-width:820px){body{overflow-y:scroll} .collapse.in{display:none} .columns .left-column,.columns .right-column{height:auto;padding-top:0;width:100% !important} .columns .right-column .content-page{padding-right:220px !important} .fixed-footer.container-fluid{padding:0 20px} .hero-buttons.container-fluid .btn-hero.btn{display:block;margin-bottom:10px} .homepage-hero{padding-top:0 !important} .homepage-content.container-fluid{padding:40px 20px} .responsive-collapse{display:block !important}}@media (min-width:820px){.content-page article{max-width:600px}}@media (max-width:1149px){.pod>div{overflow:hidden;position:relative}}@media (min-width:1150px){.float-view .content-page{background-color:transparent !important;height:100%;padding:0 !important} .float-view .content-page article{border-left:18px solid #fff;max-width:100% !important;min-height:100%;overflow:auto;position:relative} .float-view .content-page article:before{background-color:#fff;content:'';display:block;margin:0;min-height:100%;min-width:560px;overflow:auto;position:absolute;width:55%;z-index:-1} .float-view .content-page blockquote{clear:both;display:inline-block;float:left;overflow:hidden;width:48%} .float-view .content-page blockquote p{clear:none;float:none;margin-bottom:18px;min-width:328px;width:auto} .float-view .content-page blockquote:before{clear:both;content:'';display:block;height:18px;width:auto} .float-view .content-page hr{border-color:#adcb83;clear:left;float:left;width:50%} .float-view .content-page ol li,.float-view .content-page ul li{clear:left;float:left} .float-view .content-page ol li p,.float-view .content-page ul li p{background-color:#fff;clear:right;float:left;margin-left:18px;margin-right:18px;min-width:400px;width:auto} .float-view .content-page ol li pre,.float-view .content-page ul li pre{-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;clear:left;float:left;margin-right:18px;width:auto} .float-view .content-page p,.float-view .content-page .page-header{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page p.toplink{background-color:transparent;margin-bottom:0;margin-top:-23px;text-align:right} .float-view .content-page>article>pre{border:none;border-left:5px solid #881102;clear:right;float:left;margin:0 0 9px 0} .float-view .content-page table{background-color:#fff;clear:left;float:left;margin-left:18px;margin-right:18px;white-space:normal;max-width:50%} .float-view .content-page table pre,.float-view .content-page table code{white-space:normal} .float-view .content-page dl,.float-view .content-page ol,.float-view .content-page ul,.float-view .content-page h2,.float-view .content-page h3,.float-view .content-page h4,.float-view .content-page h5,.float-view .content-page h6{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page .page-header:before,.float-view .content-page ul:before,.float-view .content-page ol:before,.float-view .content-page dl:before,.float-view .content-page h2:before,.float-view .content-page h3:before,.float-view .content-page h4:before,.float-view .content-page h5:before,.float-view .content-page h6:before{clear:both;content:'';display:block;height:9px;width:auto} .float-view .content-page .pod,.float-view .content-page .pod pre{clear:both;float:left;position:relative}}@media (min-width:1200px){.columns .right-column.span9{width:76.8866339334%}}.flag_da{background:url(../img/flags.png) no-repeat 0 0;display:block;height:24px;padding:0 0 0 32px}
 .flag_de{background:url(../img/flags.png) no-repeat 0 -24px;display:block;height:24px;padding:0 0 0 32px}
 .flag_en{background:url(../img/flags.png) no-repeat 0 -48px;display:block;height:24px;padding:0 0 0 32px}
 .flag_fi{background:url(../img/flags.png) no-repeat 0 -72px;display:block;height:24px;padding:0 0 0 32px}
